# ceoclaw

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  ceo_agent.py  marketing_agent.py  ops_agent.py  product_agent.py  quality_agent.py  sales_agent.py
api/: auth.py  server.py
config/: settings.py
core/: agent_loop.py  event_bus.py  idea_generator.py  intent_parser.py  memory.py  memory_sqlite.py  memory_store.py  memory_supabase.py  prompts.py  state_manager.py
data/: ceoclaw.db  database.py
docs/: architecture.md  demo_assets.md  demo_flow.md  extensions_vs_openclaw.md  faq_for_judges.md  judge_script_7min.md  submission_checklist.md
frontend/: .env.local  index.html  legacy.html  package-lock.json  package.json  vite.config.ts
integrations/: flock_client.py  openclaw_adapter.py
scripts/: bootstrap.sh  run_local.sh
services/: agent_capabilities.py  agent_operation_plan.py  build_plan.py  build_project_state.py  build_repair.py  build_repair_feedback.py  build_validation.py  chat_memory_service.py  code_generation_service.py  design_system_service.py  file_persistence.py  generation_pipeline.py  generation_plan_context.py  image_adapter.py  link_wiring.py  llm_router_service.py  llm_website_generator.py  operation_parser.py  output_validator.py  provider_router.py  scaffold_generator.py  scaffold_pipeline.py  site_spec.py  spec_editor.py  spec_generator.py  spec_renderer.py  workspace_editor.py  workspace_scope.py
tests/: test_agent_loop.py  test_agents.py  test_api.py  (+21 more)
(+311 files in other folders)
