[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ceoclaw"
version = "1.0.0"
description = "Autonomous founder agent iterating toward $100 MRR — LangGraph edition"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.48",
    "langchain-core>=0.3.19",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-httpx>=0.30.0"]

[project.scripts]
ceoclaw = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
